Fixed z-index problem for jquery dialog

--- a/app/assets/stylesheets/active_admin.css.sass
+++ b/app/assets/stylesheets/active_admin.css.sass
@@ -113,3 +113,11 @@ div.tagsinput div
   li.choice
     float: left
     margin-right: 10px
+
+#province_list
+  padding-left: 10px
+
+// A class used by the jQuery UI CSS framework for their dialogs.
+// The default zIndex is 100. !important overrides the default.
+.ui-front
+  z-index: 1000000 !important
